@@ -1,7 +1,7 @@
 #--
 #
 # Copyright 2007, 2008, 2009, 2010, 2011, 2012, 2013 University of Oslo
-# Copyright 2007, 2008, 2009, 2010, 2011, 2012, 2013 Marius L. Jøhndal
+# Copyright 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014 Marius L. Jøhndal
 #
 # This file is part of the PROIEL web application.
 #
@@ -21,7 +21,7 @@
 #++
 
 class Inflection < ActiveRecord::Base
-  attr_accessible :lemma, :form, :language_tag, :morphology_tag
+  attr_accessible :lemma, :form, :language_tag, :morphology_tag, :part_of_speech_tag
 
   tag_attribute :language, :language_tag, LanguageTag, :allow_nil => false
 
@@ -35,10 +35,10 @@ class Inflection < ActiveRecord::Base
 
   validates_unicode_normalization_of :form, :form => UNICODE_NORMALIZATION_FORM
   validates_unicode_normalization_of :lemma, :form => UNICODE_NORMALIZATION_FORM
-  validates_uniqueness_of :form, :scope => [:language_tag, :morphology_tag, :lemma]
+  validates_uniqueness_of :form, :scope => [:language_tag, :morphology_tag, :lemma, :part_of_speech_tag]
 
   # Returns the morphological features. These will never be nil.
   def morph_features
-    MorphFeatures.new([lemma, language.tag].join(','), morphology.tag)
+    MorphFeatures.new([lemma, part_of_speech_tag, language.tag].join(','), morphology.tag)
   end
 end
