@@ -1,6 +1,9 @@
 This is a history of changes that affect users and maintainers of
 proiel-webapp. It does not list all changes; see the git history for that.
 
+  - Split inflections.lemma into inflections.lemma and
+    inflections.part_of_speech_tag for consistency.
+
 1.3.0   05/02/2014
 
   - Relaxed constraints on lemmata.variant to allow any integer value or null.
